# mssp-image-tutorial

./: .gitattributes  .gitignore  LICENSE  README.md  convert_pkl_to_hdf5.py  image_based_dynamics_tutorial.ipynb  main.py  pyproject.toml  requirements.txt
data/measured_signals/: view_0.hdf5  view_0.pkl  view_0_02.hdf5  view_0_02.pkl  view_0_03.hdf5  view_0_03.pkl  view_0_04.hdf5  view_0_04.pkl  view_1.hdf5  view_1.pkl
data/mraw/: ArUco_info_prusa_plate_speckle_4X4_50_3mm.pkl
data/mraw/view_0_01/: view_0_01.cih  view_0_01.cihx
data/mraw/view_1_01/: view_1_01.cihx  view_1_01.mraw
data/mraw_downsized/view_0_01/: view_0_01_downsized.mraw
data/mraw_downsized/view_1_01/: view_1_01_downsized.cih
methods/: __init__.py  calibration.py  modal.py  triangulation.py  utils.py  visualization.py
